<resources>
    <string name="app_name">CompensarShop</string>
    <string name="compensar_shop">Compensar Shop</string>
    <string name="logo_splash">Logo splash</string>
    <string name="welcome">Bienvenido a Compensar Shop</string>
    <string name="sign_in">Iniciar sesion</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="product_name">nombre producto</string>
    <string name="add">Agregar</string>
    <string name="sign_up">Registrarse</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="email">Correo Electronico</string>
    <string name="email_repeat">Repetir Contraseña</string>
    <string name="search">Buscar</string>
    <string name="btn_search">Boton buscar</string>
    <string name="shopping_cart">carrito de compras</string>
    <string name="product_img">imagen del producto</string>
    <string name="back">retroceder</string>
    <string name="buy">comprar</string>
    <string name="total">Total:</string>
    <string name="price">$180.00</string>
    <string name="sign_in_google">Iniciar sesión con Google</string>
    <string name="view">ver</string>
    <string name="mock_value">$0.00</string>
    <string name="subtotal">subtotal</string>
    <string name="remove_item">Borrar</string>
    <string name="decrease">-</string>
    <string name="increase">+</string>
    <string name="mock_quantity">1</string>
    <string name="mock_name">Nombre del producto</string>
</resources>